# linmort-sesvenss-wilmerj-project

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/enemies/: enemies.json
assets/maps/: instructions.md  map.txt
assets/shaders/: cubemap.wgsl  custom_material.wgsl
docs/: specification.md  specifications.md
src/: animate.rs  asset_loader.rs  assets.rs  collision_detection.rs  egui.rs  enemy.rs  floor.rs  gun.rs  hud.rs  input.rs  main.rs  map.rs  movement.rs  player.rs  render.rs  skybox.rs  sound.rs  sound_loader.rs  sprites.rs  structures.rs  timer.rs  utility.rs  vertex.rs  vertice.rs  wall.rs
